fix: adjust about me section spacing

--- a/style.css
+++ b/style.css
@@ -177,14 +177,14 @@ main {
 .about-me-text, .about-me-pic-div {
     justify-self: center;
     align-self: center;
-    max-width: 30%;
+    max-width: 32%;
     /* height: 100%; */
     min-height: 100px;
     /* border: 2px solid blue; */
 }
 
 .about-me-pic-div img{
-    border-radius: 200px;
+    border-radius: 25%;
     /* border: 2px solid black; */
     /* min-width: 250px; */
 }
@@ -199,6 +199,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 30%;
 }
 
 .about-me-skills > h3 {
@@ -299,6 +300,10 @@ main {
     border: 0;
     width: 95%;
     /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .project-card {
@@ -314,6 +319,8 @@ main {
         rgba(50, 50, 93, .1), 0 5px 15px
         rgba(0, 0, 0, .1);
     overflow: hidden;
+    /* height: 20vh; */
+    width: 80vw;
 }
 
 .project-image {
@@ -549,10 +556,10 @@ footer {
         padding: 10px;
         font-size: 1.2rem;
     }
-    .project img {
+    /* .project img {
         height: 100%;
         width: 100%;
-    }
+    } */
 
     .project-card {
         margin-bottom: 40px;
@@ -616,9 +623,9 @@ footer {
 }
 
 @media only screen and (min-width: 1050px) {
-    /* body, html {
-        font-size: 1.5rem;
-    } */
+    body, html {
+        /* font-size: 1.5rem; */
+    }
     /* #github-link-big {
         display: block;
     }
@@ -627,7 +634,7 @@ footer {
     } */
 
     .project-card {
-        height: 600px;
+        /* height: 600px; */
     }
 
     .project-image {
